--- a/Views_Joins.ipynb
+++ b/Views_Joins.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5be0d630-fafc-4a49-b7aa-1dd806992de0",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,6 @@
      "output_type": "stream",
      "text": [
       " * mysql+mysqlconnector://root:***@localhost/\n",
-      "1 rows affected.\n",
       "0 rows affected.\n"
      ]
     },
@@ -32,7 +31,7 @@
        "[]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,7 +41,7 @@
     "\n",
     "# show databases;\n",
     "\n",
-    "create database views;\n",
+    "# create database views;\n",
     "use views;"
    ]
   },
@@ -844,8 +843,412 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d95a759f-60d3-4c0f-a1c0-f4175408605b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "0 rows affected.\n",
+      "0 rows affected.\n",
+      "0 rows affected.\n",
+      "0 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "DROP TABLE IF EXISTS employees;\n",
+    "DROP TABLE IF EXISTS contractors;\n",
+    "\n",
+    "CREATE TABLE employees (\n",
+    "    employee_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    first_name  VARCHAR(50),\n",
+    "    last_name   VARCHAR(50),\n",
+    "    position    VARCHAR(50),\n",
+    "    salary      DECIMAL(10,2)\n",
+    ");\n",
+    "\n",
+    "CREATE TABLE contractors (\n",
+    "    contractor_id INT AUTO_INCREMENT PRIMARY KEY,\n",
+    "    first_name    VARCHAR(50),\n",
+    "    last_name     VARCHAR(50),\n",
+    "    position      VARCHAR(50),\n",
+    "    hourly_rate   DECIMAL(10,2)\n",
+    ");\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9ae2750e-aa99-4508-bf6a-e7a91acf956c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "3 rows affected.\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "INSERT INTO employees (first_name, last_name, position, salary)\n",
+    "VALUES\n",
+    "('Alice', 'Smith', 'Developer', 70000.00),\n",
+    "('Bob', 'Johnson', 'Developer', 75000.00),\n",
+    "('Charlie', 'Lee', 'Manager', 90000.00);\n",
+    "\n",
+    "INSERT INTO contractors (first_name, last_name, position, hourly_rate)\n",
+    "VALUES\n",
+    "('Dave', 'Williams', 'Developer', 40.00),\n",
+    "('Eve', 'Brown', 'Tester', 35.00),\n",
+    "('Bob', 'Johnson', 'Developer', 45.00);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2ec9dfd5-fd75-426c-8ee9-9b79d11cbf64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>employee_id</th>\n",
+       "        <th>first_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Alice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Bob</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Charlie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Eve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Bob</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Alice'), (2, 'Bob'), (3, 'Charlie'), (1, 'Dave'), (2, 'Eve'), (3, 'Bob')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select  employee_id,first_name from employees\n",
+    "union \n",
+    "select contractor_id\t,first_name from contractors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2e0bbe37-229b-4d73-9737-e4be19ccc5d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>employee_id</th>\n",
+       "        <th>first_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Alice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Bob</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Charlie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Dave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Eve</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Bob</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Alice'), (2, 'Bob'), (3, 'Charlie'), (1, 'Dave'), (2, 'Eve'), (3, 'Bob')]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select  employee_id,first_name from employees\n",
+    "union all\n",
+    "select contractor_id\t,first_name from contractors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b5be9710-7848-40a1-a531-1d2aabad3fba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>employee_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>position</th>\n",
+       "        <th>salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Alice</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>70000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Bob</td>\n",
+       "        <td>Johnson</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>75000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Charlie</td>\n",
+       "        <td>Lee</td>\n",
+       "        <td>Manager</td>\n",
+       "        <td>90000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Dave</td>\n",
+       "        <td>Williams</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>40.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Eve</td>\n",
+       "        <td>Brown</td>\n",
+       "        <td>Tester</td>\n",
+       "        <td>35.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Bob</td>\n",
+       "        <td>Johnson</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>45.00</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Alice', 'Smith', 'Developer', Decimal('70000.00')),\n",
+       " (2, 'Bob', 'Johnson', 'Developer', Decimal('75000.00')),\n",
+       " (3, 'Charlie', 'Lee', 'Manager', Decimal('90000.00')),\n",
+       " (1, 'Dave', 'Williams', 'Developer', Decimal('40.00')),\n",
+       " (2, 'Eve', 'Brown', 'Tester', Decimal('35.00')),\n",
+       " (3, 'Bob', 'Johnson', 'Developer', Decimal('45.00'))]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select * from employees\n",
+    "union all\n",
+    "select * from contractors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "17211681-838a-40e7-af18-3436e0486552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * mysql+mysqlconnector://root:***@localhost/\n",
+      "6 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>employee_id</th>\n",
+       "        <th>first_name</th>\n",
+       "        <th>last_name</th>\n",
+       "        <th>position</th>\n",
+       "        <th>salary</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Alice</td>\n",
+       "        <td>Smith</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>70000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Bob</td>\n",
+       "        <td>Johnson</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>75000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Charlie</td>\n",
+       "        <td>Lee</td>\n",
+       "        <td>Manager</td>\n",
+       "        <td>90000.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>1</td>\n",
+       "        <td>Dave</td>\n",
+       "        <td>Williams</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>40.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>2</td>\n",
+       "        <td>Eve</td>\n",
+       "        <td>Brown</td>\n",
+       "        <td>Tester</td>\n",
+       "        <td>35.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>3</td>\n",
+       "        <td>Bob</td>\n",
+       "        <td>Johnson</td>\n",
+       "        <td>Developer</td>\n",
+       "        <td>45.00</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(1, 'Alice', 'Smith', 'Developer', Decimal('70000.00')),\n",
+       " (2, 'Bob', 'Johnson', 'Developer', Decimal('75000.00')),\n",
+       " (3, 'Charlie', 'Lee', 'Manager', Decimal('90000.00')),\n",
+       " (1, 'Dave', 'Williams', 'Developer', Decimal('40.00')),\n",
+       " (2, 'Eve', 'Brown', 'Tester', Decimal('35.00')),\n",
+       " (3, 'Bob', 'Johnson', 'Developer', Decimal('45.00'))]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "\n",
+    "select * from employees\n",
+    "union\n",
+    "select * from contractors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad79419f-99c9-4f43-9f75-2f7ef5f802b0",
    "metadata": {},
    "outputs": [],
    "source": []
